manifest/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec: 
  replicas: 5
  selector:                                         # which Pods belong to a Deployment (this).
    matchLabels: 
      app: nginx

  template:                                          # config inside config which is used for pods inside deployment
    metadata:
      labels:
        app: nginx 
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 8080
