manifest/redis-dply-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  
  template:
    metadata:
      labels:
        app: redis
    spec:  
      containers:
       - name: redis
         image: redis:7.2
         ports:
          - containerPort: 6379

         volumeMounts:
          - name: redis-volume
            mountPath: /data

      volumes:
        - name: redis-volume
          emptyDir: {}

---

apiVersion: v1
kind: Service 
metadata: 
  name: redis-svc

spec:
  selector:
    app: redis
 
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
